--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^2.9.5",
     "next": "10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.12.2"
   }
 }
